# docs-for-me

./: .gitignore  CHANGELOG.md  README.md  package.json  pyproject.toml
packaging/: pyinstaller_entry.py
scripts/: build-windows-exe.ps1
src/docs_for_me/: __init__.py  analyzer.py  cli.py  prompts.py
src/docs_for_me/ai/: __init__.py  base.py  none.py  opencode.py
src/docs_for_me/core/: __init__.py  content_signals.py  file_docs.py  folder_docs.py  language.py  scanner.py  structure.py
src/docs_for_me/git/: __init__.py  change_docs.py  diff_reader.py
src/docs_for_me/render/: __init__.py  markdown.py  status.py
tests/: test_change_docs.py  test_content_signals.py  test_folder_docs.py  test_language.py  test_prompts.py  test_scanner.py  test_structure.py
